kubernetes/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: devops-shared-alb
    alb.ingress.kubernetes.io/group.order: "1"

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          - path: /grafana
            pathType: Prefix

            backend:
              service:
                name: monitoring-grafana

                port:
                  number: 80
